added initial state example

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <script src="http://fb.me/react-0.12.2.js"></script>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="intro"></div>
+  <hr />
+  <div id="state"></div>
+  <hr />
 
 
   <script type="text/javascript" src="build/intro.js"></script>
+  <script type="text/javascript" src="build/initialstate.js"></script>
 </body>
 </html>
