added some parent-child examples

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
   <hr />
   <div id="state"></div>
   <hr />
-
+  <div id="parent"></div>
+  <hr />
+  <div id="childState"></div>
+  <hr />
 
   <script type="text/javascript" src="build/intro.js"></script>
   <script type="text/javascript" src="build/initialstate.js"></script>
+  <script type="text/javascript" src="build/parent.js"></script>
+  <script type="text/javascript" src="build/childstate.js"></script>
 </body>
 </html>
