added simple todo 'app'

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
   <hr />
   <div id="childState"></div>
   <hr />
+  <div id="todo"></div>
+  <hr />
 
   <script type="text/javascript" src="build/intro.js"></script>
   <script type="text/javascript" src="build/initialstate.js"></script>
   <script type="text/javascript" src="build/parent.js"></script>
   <script type="text/javascript" src="build/childstate.js"></script>
+  <script type="text/javascript" src="build/todo.js"></script>
 </body>
 </html>
