added component lifecycle example, small refactoring

--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
   <hr />
   <div id="parent"></div>
   <hr />
-  <div id="childState"></div>
+  <div id="props"></div>
   <hr />
   <div id="todo"></div>
+  <hr />
+  <h1>6. Lifecycle:</h1>
+  <a href="./lifecycle.html" target="_blank">Lifecycle</a>
   <hr />
 
   <script type="text/javascript" src="build/intro.js"></script>
   <script type="text/javascript" src="build/initialstate.js"></script>
   <script type="text/javascript" src="build/parent.js"></script>
-  <script type="text/javascript" src="build/childstate.js"></script>
+  <script type="text/javascript" src="build/props.js"></script>
   <script type="text/javascript" src="build/todo.js"></script>
 </body>
 </html>
